syntax = "proto3";
package webitel.contacts;
option go_package = "webitel.go/api/contacts;contacts";

import "contacts/fields.proto";
import "google/protobuf/struct.proto";

// // The Contact's variable.
// // Arbitrary data that is populated by users or clients.
// // Duplicate keys and values are allowed.
// message Variable {
  
//   // Metadata about the variable.
//   FieldMetadata metadata = 1
//   [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
//     read_only: true
//   }];

//   // Key name of the variable.
//   string key = 5;
//   // JSON value assigned.
//   google.protobuf.Value value = 6;

// }

// The Contact's variable.
// Arbitrary data that is populated by users or clients.
// Duplicate keys and values are allowed.
message Variable {
  
  // [META]: --------------------------------------

  // The unique ID of the association. Never changes.
  string id = 1;
  
  // Version of the latest update. Numeric sequence.
  int32 ver = 2;

  // Unique ID of the latest version of the update.
  // This ID changes after any update to the underlying value(s).
  string etag = 3;

  // // The Contact source associated with.
  // webitel.contacts.Lookup contact = 4;

  // The user who created this Field.
  int64 created_at = 5;

  // Timestamp(milli) of the Field creation.
  webitel.contacts.Lookup created_by = 6;
  
  // Timestamp(milli) of the last Field update.
  // Take part in Etag generation.
  int64 updated_at = 7;
  
  // The user who performed last Update.
  webitel.contacts.Lookup updated_by = 8;
  
  // [VALUE]: --------------------------------------

  // Key name of the variable.
  string key = 11;
  // JSON value of the variable.
  google.protobuf.Value value = 12;

}

// Input of the Contact's variable.
message InputVariable {

  // [META]: --------------------------------------

  // Unique ID of the latest version of an existing resorce.
  string etag = 1;

  // [VALUE]: --------------------------------------

  // NEW Key.
  string key = 11;

  // NEW Value.
  google.protobuf.Value value = 12;
}


// Variables service catalog.
service Variables {

  // // Get value of the contact's variable.
  // rpc GetVariable(LocateVariableRequest) returns (Variable) {
  //   option (google.api.http) = {
  //     get: "/contacts/{contact_id}/variables/{id}"
  //   };
  // }

  // List variables of the contact
  rpc ListVariables(SearchVariablesRequest) returns (VariableList)
  {

  }
  // Add variables to the contact
  rpc AddVariables(CreateVariablesRequest) returns (VariableList)
  {

  }
  // Reset all variables of the contact
  rpc SetVariables(UpdateVariablesRequest) returns (VariableList)
  {

  }
  // Update value of the contact variable
  rpc SetVariable(UpdateVariableRequest) returns (Variable)
  {

  }
  // Remove variable(s) of the contact
  rpc DelVariables(DeleteVariablesRequest) returns (VariableList)
  {

  }
  // Remove the contact's variable by key
  rpc DelVariable(DeleteVariableRequest) returns (Variable)
  {

  }
}

// Variable dataset.
message VariableList {

  // Variable dataset page.
  repeated Variable data = 1;
  // The page number of the partial result.
  int32 page = 2;
  // Indicates that this is a partial result.
  // More data available upon query: ?size=${data.len}&page=${page++}
  bool next = 3;

}

// Locate Variable by unique IDentifier.
message LocateVariableRequest {

  // ------- Result Options ------

  // Fields to be retrieved as a result.
  repeated string fields = 1;

  // ------- Search Options ------ //
  
  // Contact ID associated with.
  int64 contact_id = 2;
  
  // Variable unique ID assigned.
  string id = 3;

}


message SearchVariablesRequest {
  
  // ------- Result Options ------

  // Page number of result. offset = ((page-1)*size)
  int32 page = 2;

  // Size of result page. limit = (size++)
  int32 size = 1;
  
  // Search term: variable key;
  // `?` - matches any one character
  // `*` - matches 0 or more characters
  string q = 6;

  // Sort the result according to fields.
  repeated string sort = 3;

  // Fields to be retrieved as a result.
  repeated string fields = 4;

  // ------- Search Filters ------
  
  // Contact ID associated with.
  int64 contact_id = 5;
  
  // Record(s) with unique ID only.
  repeated string id = 7;

}

message CreateVariablesRequest {

  // ------- Result Options -------

  // Fields to be retrieved as a result.
  repeated string fields = 1;

  // ------- Create Options -------

  // Link contact ID.
  string contact_id = 2;

  // Fixed object of unique variables to associate with a Contact.
  // Each individual key of an object represents a separate variable.
  // Variable{key} already linked with the Contact and listed here will be updated.
  map<string, google.protobuf.Value> input = 3;

}

message UpdateVariablesRequest {

  // --------- Result Options -------- //

  // Fields to be retrieved into result of changes.
  repeated string fields = 1;

  // ------- Update Options ------- //

  // Contact ID associated with.
  string contact_id = 2;

  // --------- Update Options -------- //

  // Fixed object of unique variables to associate with a Contact.
  // Each individual key of an object represents a separate variable.
  // Variable{key} already linked with the Contact but not listed here will be removed.
  map<string, google.protobuf.Value> input = 3;

}

message UpdateVariableRequest {

  // --------- PATCH Options -------- //

  // JSON PATCH fields mask.
  // List of JPath fields specified in body(input).
  repeated string x_json_mask = 1;

  // --------- Result Options -------- //

  // Fields to be retrieved into result of changes.
  repeated string fields = 2;

  // ------- Update Options ------- //

  // Contact ID associated with.
  string contact_id = 3;

  // NEW Variable update.
  InputVariable input = 4;
}

message DeleteVariablesRequest {

  // --------- Result Options -------- //

  // Fields to be retrieved as a result.
  repeated string fields = 1;

  // --------- Delete Options -------- //

  // Contact ID associated with.
  string contact_id = 2;

  // Set of unique ID(s) to remove.
  repeated string etag = 3;

}

message DeleteVariableRequest {


  // --------- Result Options -------- //

  // Fields to be retrieved as a result.
  repeated string fields = 1;

  // ------- Delete Options ------- //

  // Contact ID associated with.
  string contact_id = 2;

  // Unique ID to remove.
  string etag = 3;

}